// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerRow should be rendered correctly 1`] = `
<div
  aria-posinset={2}
  className="pickerRow container align-items-center"
  role="option"
  style={
    Object {
      "columnGap": undefined,
      "rowGap": undefined,
    }
  }
>
  <div
    className="uui-table-cell cell uui-dt-vars data-table-cell cell size-36 padding-24 padding-left-24 align-widgets-top"
    role="cell"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="contentWrapper"
      style={
        Object {
          "alignSelf": undefined,
          "justifyContent": undefined,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="renderItem"
      >
        <div />
        <div
          className="flexSpacer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerRow should be rendered correctly 2`] = `
<div
  aria-posinset={2}
  aria-selected={true}
  className="uui-focus pickerRow container -clickable align-items-center"
  onClick={[Function]}
  role="option"
  style={
    Object {
      "columnGap": undefined,
      "rowGap": undefined,
    }
  }
>
  <div
    className="uui-table-cell cell uui-dt-vars data-table-cell cell size-48 padding-24 padding-left-24 align-widgets-top"
    role="cell"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="contentWrapper"
      style={
        Object {
          "alignSelf": undefined,
          "justifyContent": undefined,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="renderItem"
      >
        <div />
        <div
          className="flexSpacer"
        />
        <div
          className="iconWrapper"
        >
          <div
            aria-label="Selected"
            className="container uui-icon uui-enabled iconPrimary"
            style={Object {}}
          >
            <svg
              className=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
